[tool.poetry]
name = "estios"
version = "0.1.0"
description = "Economic Spatial Temporal Input-Output Systems"
authors = ["Dr Griffith Rees <grees@turing.ac.uk>"]
maintainers = ["Dr Griffith Rees <grees@turing.ac.uk>"]
readme = "README.md"
repository = "https://github.com/griff-rees/estios"

[tool.poetry.dependencies]
python = "~3.11"
geopandas = "^0.10.2"
plotly = "^5.15.0"
typer = {version = "^0.4.2", extras = ["all"]}
openpyxl = "^3.1.2"
setuptools = "^65.5.1"
numpy = "^1.25.1"
xlrd = "^2.0.1"
# GDAL = {version = "3.5.3", platform = "darwin"}
# Fiona = "1.8.21"
# pyogrio = "^0.4.2"
# pyogrio = "^0.4.2"
# pyarrow = "^10.0.1"
Fiona = "^1.9.4.post1"
pymrio = "^0.4.8"
country-converter = "^0.8.0"
poetry-dotenv-plugin = "^0.1.0"
ukcensusapi = "^1.1.6"
psutil = "5.9.4"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^3.6.5"

[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
python-dotenv = {version = "^0.19.2", extras = ["cli"]}
jupyter-dash = "^0.4.2"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
dash-auth = "^1.4.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-remotedata = "^0.3.3"
pytest = "^6.2.5"
pre-commit = "^2.21.0"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.7"
mypy = "^1.4"
pytest-xdist = "^3.3.1"
pymrio = "^0.4.8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.11"
mkdocs-typer = "^0.0.2"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-literate-nav = "^0.5.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"
black = "^22.12.0"
pymdown-extensions = "^10.0"
mkdocs-bibtex = "^2.11.0"
mktestdocs = "^0.2.1"
markdown-exec = {extras = ["ansi"], version = "^1.6.0"}
tabulate = "^0.9.0"
mkdocs-include-markdown-plugin = "^4.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov=estios
--cov-report=term:skip-covered
--pdbcls=IPython.terminal.debugger:TerminalPdb
--doctest-modules
-m "not slow"
--ignore=notebooks
--ignore-glob=*PRE_MERGE.py
--strict-config
--strict-markers
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "nomis: requires a nomis api key in .env to run",
]
remote_data_strict = true
xfail_strict = true

[tool.poetry.scripts]
estios = "estios.cli:app"

# Pre-commit hooks related config.
[tool.pycln]
all = true

[tool.pydocstyle]
convention = "google"
match = '(?!test_).*\.py'
add-ignore = [
  "D100", "D101", "D102", "D104", "D105", "D106", "D107", "D203",
  "D204", "D211", "D213"
]
